bynkc/tests/fixtures/negative/410_is_nested_refined_pattern_rejected/input.bynk
commons demo {
  fn f(r: Result[Int, String]) -> Bool {
    r is Ok(_ where NonNegative)
  }
}
